Fix #1: Placeholder cut off

--- a/cw-token-field.css
+++ b/cw-token-field.css
@@ -52,6 +52,10 @@ input {
   word-spacing: inherit;
 }
 
+input.maximize-width {
+  width: 100% !important;
+}
+
 cw-options-list {
   background: #fff;
   border: 1px solid #aaa;
